apps/arcs/psi/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: arc-psi
---
apiVersion: v1
kind: Namespace
metadata: 
  name: arc-sandbox
  labels: 
    rho2.sandbox: "true"
